<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter_list_black_24dp"
        android:title="@string/action_filter"
        app:showAsAction="ifRoom|collapseActionView" >

        <menu>
            <item
                android:id="@+id/action_filter_all"
                android:title="@string/action_filter_all"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_filter_expenses"
                android:title="@string/action_filter_expenses"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_filter_incomes"
                android:title="@string/action_filter_incomes"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_filter_transfers"
                android:title="@string/action_filter_transfers"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_filter_more"
                android:title="@string/action_filter_more"
                app:showAsAction="never" />
        </menu>
    </item>

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item android:id="@+id/action_import"
        android:title="@string/action_import"
        app:showAsAction="never"/>

    <item android:id="@+id/action_export"
        android:title="@string/action_export"
        app:showAsAction="never"/>

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never"/>

</menu>