<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/ic_format_list_bulleted_black_24dp"
        android:title="@string/title_transactions" />

    <item
        android:id="@+id/navigation_accounts"
        android:icon="@drawable/ic_account_balance_bank_black_24dp"
        android:title="@string/title_accounts" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

</menu>
